# zh800

./: 1402656816E35.txt  emb_result_file.xls
CommunicationServer/: build.sbt
DataQueueProcessing/: build.sbt
StatisticCache/: StatisticCache.js  package.json
SyncTwoSite/: crontab.example
autopatch/: autopatch.c  config  taicon_ver16062301.txt  taicon_ver16062801.txt  updatelist
camera/: build_all.sh  image_0421  image_0421.c  image_0502  image_0502.c  image_0619  image_0619.c
camera/FeaturePointsSolutions/: CMakeCache.txt  CMakeLists.txt  Makefile  captureImage.cpp  cmake_install.cmake  detectImage.cpp  detectVideo.cpp  detection.cpp  detection.hpp
dashboard/: .gitignore  README.md  forget.html  index.html  package.json  signup.html
dashboard.mockup/: dashboard.html  index.html  signup.html
mongodb/: .StatisticCache.js.swp  .save2Mongo.js.swp  1412839370A61.txt  SendDataClient.js  StatisticCache.js  URLMapper.js  appendToMongo.js  data_model.js  one.txt  package.json  pressureTest.sh  pressureText.sh  processMongo.js  rabbitSender.js  runServer.sh  save2Mongo.js  save2Mongo.sublime-workspace  save2RabbitMQ.js  test  test.txt
net/: server.js  server2.js
ping/: README  README.md  boxStatus.html  boxStatusPic.html  boxStatusPic2.html  config.ini  dailySum.js  data_model.js  dbConnect.js  expressServer.js  file.html  file.jade  file.js  iniTest.js  ipMapping.json  ipMapping_2.json  jadeTest.html  jadeTest.jade  mappingIpMachine.json  package.json  ping.js  ping_2.js  routes.js  runServer.sh  sendMail.js  server.js  server_2.js  test.htm  webSocket.html  (+1 more)
(+448 files in other folders)
