cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories(${GSL_INCLUDE_DIRS} ${GSLCBLAS_INCLUDE_DIRS})
set(LIBS ${LIBS} ${GSL_LIBRARIES} ${GSLCBLAS_LIBRARIES})
add_executable( DetectVideo detectVideo.cpp detection.cpp)
add_executable( DetectImage detectImage.cpp detection.cpp)
add_executable( CaptureImage captureImage.cpp detection.cpp)
target_link_libraries( DetectVideo ${OpenCV_LIBS} -lgsl)
target_link_libraries( DetectImage ${OpenCV_LIBS} -lgsl)
target_link_libraries( CaptureImage ${OpenCV_LIBS} -lgsl)
